# mission7_state_estimator

./: CMakeLists.txt  README.md  package.xml
include/mission7_state_estimator/: .Mission7Processor.cpp.swp  .Mission7Processor.h.swp  .Types.h.swp  Callback.cpp  Mission7Processor.cpp  Mission7Processor.h  Mission7StateEstimator.cpp  Mission7StateEstimator.h  Params.h  Processor.cpp  Types.h  Update.cpp
matlab/: ObstacleRobot.m  Roomba.m  State.m  State.m~  TargetRobot.m  TargetRobot.m~  calcSigmaPoints.m  calcSigmaPoints.m~  detectCollision.m  detectCollision.m~  drawCovariances.m  drawMean.m  drawSigmaPoints.m  drawState.m  generateWeights.m  kalmanUpdate.m  makeMeasurement.m  moveForward  moveForward.m  moveForward~  movie.avi  objecttoVector.m  objecttoVector.m~  obstacleMove.m  obstaclePause.m  plotGaussianEllipsoid.m  plotGaussianEllipsoid.m~  plotTheta_obstacle.m  plotTheta_targets.m  plotTimer.m  plotxy_obstacle.m  plotxy_obstacle.m~  plotxy_target.m  process.m  process.m~  rotate.m  rotate.m~  rotateRoomba.m  test_process.m  test_process.m~  (+9 more)
report images/: 40 sec no sigma.mov  unscented kalman.mov
src/: state_estimation_node.cpp
